Fix issue with top navbar spacing

--- a/style.css
+++ b/style.css
@@ -43,7 +43,6 @@ p {
 
 	text-align: left;
 	width: 100%;
-	height: 40px;
 	position: relative;
 	background-color: #333;
 }
